# ckpool

./: .gitignore  AUTHORS  CKPOOL_API_GUIDE.md  CLAUDE.md  ChangeLog  Makefile.am  POOL_FEE.md  PRODUCTION_READY_SUMMARY.md  README-SOLOMINING  README.md  check-bch-zmq.sh  ckforkchangesprd.md  ckpool-test-multinode.conf  ckpool.conf  clean-build.sh  clean-old-blocks.sh  cleanup-old-scripts.sh  configure.ac  debug-zmq-verbose.patch  debug-zmq.patch  fix-zmq-logging.patch  fix-zmq-subscription.patch  install-ckpool.sh  install-local.sh  install-testnet.sh  install.sh  lean_blocks_prd.md  lean_blocks_prd2.md  lean_blocks_prd3.md  monitor.sh  post-install.sh  prd_lean_blocks_manual_dual_submit.md  setup-bch-regtest.sh  setup-zmq-firewall.sh  test-ckpool-regtest.sh  test-zmq-connection.sh  test-zmq-subscriber.py  test_cashaddr  test_cashaddr.c  testckpool.sh  (+1 more)
production-scripts/: README.md  ckpool-regtest.conf.example  cleanup-regtest.sh  generate-regtest-transactions.sh  install-ckpool-test.sh  rebuild-ckpool-test.sh  test-ckpool-regtest.sh  test-mine-block.sh  testckpool.sh  verify-pool-coinbase.sh
share/: ckpool.service
solobtc/: main.pid
src/: Makefile.am  bitcoin.c  cashaddr.cpp  cashaddr_simple.c  cashaddr_simple.h  ckpool.c  ckpool.h  generator.c  libckpool.c  libckpool.h  notifier  sha2.c  sha256_arm_shani.c  stratifier.c  test_cashaddr.c
src/jansson-2.14/: Makefile.am  jansson.pc
src/jansson-2.14/src/: Makefile.am
src/sha256_code_release/: sha256_avx1.asm  sha256_avx2_rorx2.asm  sha256_sse4.asm
test/: Makefile.am  sha256  sha256.c
testing/: README.md
